# facere

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  go.mod  go.sum  main.go
.github/workflows/: github-actions-demo.yml  release.yml
ci/: install.sh
cmd/: facere.go
helpers/: contains.go  create-directory.go  create-file.go  string-utils.go  template.go
src/: facere.rs  main.rs  recipient.rs  utils.rs
src/facere/: mod.rs
